--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,14 @@ dependencies:
   firebase_auth: ^4.19.5
   pdf: ^3.10.8
   printing: ^5.3.0
-  screenshot: ^3.0.0
+  screenshot: ^2.2.0
   searchable_listview: ^2.9.0
+  flutter_bloc: ^9.0.0
+  speech_to_text: ^6.6.2
+  flutter_tts: ^3.8.5
+  equatable: ^2.0.7
+  get_it: ^7.6.7
+  dartz: ^0.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
